k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amunity
  namespace: amunity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amunity
  template:
    metadata:
      labels:
        app: amunity
    spec:
      containers:
      - name: amunity
        image: ghcr.io/j-kowal/apkka:latest  # dostosuj do swojego repozytorium
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      imagePullSecrets:
      - name: ghcr-secret
