k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amunity-service
  namespace: amunity
spec:
  selector:
    app: amunity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
